fixed spacing on modal

--- a/style.css
+++ b/style.css
@@ -263,8 +263,15 @@ footer{
   background-color: rgba(255,255,255,0.9); /* Black w/ opacity */
 }
 
+.modal-table {
+  position:absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .modal-row {
-  height: 500px;
+  height: 350px;
 }
 
 /* Modal Content (image) */
